feat: add fonts

--- a/style.css
+++ b/style.css
@@ -1,25 +1,35 @@
 @font-face {
     font-family: MajorMonoDisplay;
     src: url("assets/fonts/MajorMonoDisplay-Regular.ttf");
-    font-weight: 400;
 }
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Regular.ttf");
+    font-style: normal;
     font-weight: 400;
 }
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Bold.ttf");
+    font-style: normal;
     font-weight: 700;
 }
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Italic.ttf");
+    font-style: italic;
     font-weight: 400;
+
 }
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-BoldItalic.ttf");
+    font-style: italic;
     font-weight: 700;
 }
+body {
+    font-family: MajorMonoDisplay, UbuntuMono;
+}
+* {
+    box-sizing: border-box;
+  }
