refactor: add text and borders

--- a/style.css
+++ b/style.css
@@ -28,8 +28,22 @@
     font-weight: 700;
 }
 body {
-    font-family: MajorMonoDisplay, UbuntuMono;
+    font-family: UbuntuMono;
+    min-height: 100vh;
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 * {
     box-sizing: border-box;
+  }
+  .header {
+    border: 1px solid red;
+  }
+  .main {
+    border: 1px solid red;
+  }
+  .footer {
+    border: 1px solid red;
   }
