--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ body {
     list-style: none;
   }
   .nav-link {
+    font-family: MajorMonoDisplay;
     padding: 0 40px;
     line-height: 60px;
+    font-size: 24px;
+    text-decoration: none;
+  }
+  html {
+    scroll-behavior: smooth;
   }
