--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ body {
     box-sizing: border-box;
   }
   .header {
-    border: 1px solid red;
+    background-color: bisque;
+    ;
   }
   .main {
     border: 1px solid red;
@@ -53,16 +54,23 @@ body {
   }
   .nav-list {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     list-style: none;
   }
   .nav-link {
     font-family: MajorMonoDisplay;
     padding: 0 40px;
-    line-height: 60px;
+    line-height: 40px;
     font-size: 24px;
     text-decoration: none;
+    transition: .3s;
+    color: red;
+  }
+  .nav-link:hover {
+    color: bisque;
+    background-color: crimson;
+    padding: 24px 40px;
   }
   html {
     scroll-behavior: smooth;
