--- a/style.css
+++ b/style.css
@@ -2,30 +2,35 @@
     font-family: MajorMonoDisplay;
     src: url("assets/fonts/MajorMonoDisplay-Regular.ttf");
 }
+
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Regular.ttf");
     font-style: normal;
     font-weight: 400;
 }
+
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Bold.ttf");
     font-style: normal;
     font-weight: 700;
 }
+
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-Italic.ttf");
     font-style: italic;
     font-weight: 400;
 }
+
 @font-face {
     font-family: UbuntuMono;
     src: url("assets/fonts/UbuntuMono-BoldItalic.ttf");
     font-style: italic;
     font-weight: 700;
 }
+
 body {
     font-family: UbuntuMono;
     min-height: 100vh;
@@ -34,30 +39,67 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
 * {
     box-sizing: border-box;
-  }
-  .header {
+}
+
+.header {
     background-color: bisque;
-    ;
-  }
+}
+
   .main {
+
+}
+
+.footer {
     border: 1px solid red;
-  }
-  .footer {
-    border: 1px solid red;
-  }
-  .container {
-    max-width: 1024px;
+}
+
+.container {
+    max-width: 800px;
     margin: 0 auto;
-  }
-  .nav-list {
+}
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section {
+    width: 50%;
+}
+
+@media (max-width: 700px) {
+    section {
+        width: 100%;
+    }
+}
+
+#profile-title {
+    text-align: center;
+}
+
+#contacts-title {
+    text-align: center;
+}
+
+#summary-title {
+    text-align: center;
+}
+
+#english-title {
+    text-align: center;
+}
+
+.nav-list {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style: none;
-  }
-  .nav-link {
+}
+
+.nav-link {
     font-family: MajorMonoDisplay;
     padding: 0 40px;
     line-height: 40px;
@@ -65,12 +107,18 @@ body {
     text-decoration: none;
     transition: .3s;
     color: red;
-  }
-  .nav-link:hover {
+}
+
+.nav-link:hover {
     color: bisque;
     background-color: crimson;
     padding: 24px 40px;
-  }
-  html {
+}
+
+html {
     scroll-behavior: smooth;
-  }
+}
+
+.contacts-list {
+    list-style: none;
+}
