refactor: edit class names and styles

--- a/style.css
+++ b/style.css
@@ -45,15 +45,11 @@ body {
 }
 
 .header {
-    background-color: bisque;
-}
-
-  .main {
-
+    background-color: #ffe4c4;
 }
 
 .footer {
-    border: 1px solid red;
+    border: 1px solid #ff0000;
 }
 
 .container {
@@ -106,12 +102,12 @@ section {
     font-size: 24px;
     text-decoration: none;
     transition: .3s;
-    color: red;
+    color: #ff0000;
 }
 
 .nav-link:hover {
-    color: bisque;
-    background-color: crimson;
+    color: #ffe4c4;
+    background-color: #dc143c;
     padding: 24px 40px;
 }
 
@@ -121,4 +117,15 @@ html {
 
 .contacts-list {
     list-style: none;
+}
+
+.profile {
+    padding: 20px 0 0;
+    display: block;
+    text-align: center;
+}
+
+.my-photo {
+    border-radius: 2%;
+    box-shadow: 1px 1px 3px 1px #0707074d;
 }
