--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
 
 body {
     font-family: UbuntuMono;
+    font-size: 18px;
+    line-height: 1.3;
     min-height: 100vh;
     margin: 0; padding: 0;
     display: flex;
@@ -49,7 +51,11 @@ body {
 }
 
 .footer {
-    border: 1px solid #ff0000;
+    background-color: #ffe4c4;
+    font-family: MajorMonoDisplay;
+    padding: 0 40px;
+    line-height: 40px;
+    text-align: center;
 }
 
 .container {
@@ -128,4 +134,11 @@ html {
 .my-photo {
     border-radius: 2%;
     box-shadow: 1px 1px 3px 1px #0707074d;
+}
+
+.github-link {
+    font-family: MajorMonoDisplay;
+    text-decoration: none;
+    transition: .3s;
+    color: #ff0000;
 }
