--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 
 section {
     width: 50%;
+    padding: 0 25px;
 }
 
 @media (max-width: 700px) {
@@ -78,8 +79,15 @@ section {
     }
 }
 
-#profile-title {
+.profile-title {
     text-align: center;
+    margin-top: 60px;
+}
+
+@media (max-width: 700px) {
+    .profile-title {
+        margin-top: 0;
+    }
 }
 
 #contacts-title {
@@ -114,7 +122,7 @@ section {
 .nav-link:hover {
     color: #ffe4c4;
     background-color: #dc143c;
-    padding: 24px 40px;
+    padding: 26px 40px;
 }
 
 html {
