--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 body {
-    font-family: UbuntuMono;
+    font-family: UbuntuMono, Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 1.3;
     min-height: 100vh;
@@ -52,7 +52,7 @@ body {
 
 .footer {
     background-color: #ffe4c4;
-    font-family: MajorMonoDisplay;
+    font-family: MajorMonoDisplay, Arial, Helvetica, sans-serif;
     padding: 0 0 25px;
     line-height: 4px;
     text-align: center;
@@ -73,7 +73,16 @@ section {
     padding: 0 25px;
 }
 
+.profile {
+    width: 50%;
+    padding: 20px 0 0;
+    text-align: center;
+}
+
 @media (max-width: 700px) {
+    .profile {
+        width: 100%;
+    }
     section {
         width: 100%;
     }
@@ -102,7 +111,7 @@ section {
 }
 
 .nav-link {
-    font-family: MajorMonoDisplay;
+    font-family: MajorMonoDisplay, Arial, Helvetica, sans-serif;
     padding: 0 40px;
     line-height: 40px;
     font-size: 24px;
@@ -137,14 +146,9 @@ html {
     scroll-behavior: smooth;
 }
 
-.contacts-list {
+.contacts-list,
+.courses-list {
     list-style: none;
-}
-
-.profile {
-    padding: 20px 0 0;
-    display: block;
-    text-align: center;
 }
 
 .my-photo {
@@ -153,7 +157,7 @@ html {
 }
 
 .github-link {
-    font-family: MajorMonoDisplay;
+    font-family: MajorMonoDisplay, Arial, Helvetica, sans-serif;
     text-decoration: none;
     transition: .3s;
     color: #ff0000;
@@ -166,10 +170,6 @@ html {
 
 .div-footer-autor {
     text-align: center;
-}
-
-.courses-list {
-    list-style: none;
 }
 
 .span-contacts {
