--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 850px;
     margin: 0 auto;
 }
 
@@ -68,7 +68,11 @@ body {
     flex-wrap: wrap;
 }
 
-section {
+.contacts,
+.summary,
+.courses,
+.skills,
+.english {
     width: 50%;
     padding: 0 25px;
 }
@@ -80,11 +84,17 @@ section {
 }
 
 @media (max-width: 700px) {
+    section,
+    .contacts,
+    .summary,
+    .courses,
+    .skills,
+    .english,
     .profile {
         width: 100%;
     }
-    section {
-        width: 100%;
+    .profile-title {
+        margin-top: 0;
     }
 }
 
@@ -93,13 +103,7 @@ section {
     margin-top: 60px;
 }
 
-@media (max-width: 700px) {
-    .profile-title {
-        margin-top: 0;
-    }
-}
-
-.section-title {
+.div-title {
     text-align: center;
 }
 
@@ -147,7 +151,8 @@ html {
 }
 
 .contacts-list,
-.courses-list {
+.courses-list,
+.skills-list {
     list-style: none;
 }
 
@@ -172,6 +177,7 @@ html {
     text-align: center;
 }
 
-.span-contacts {
+.span-contacts,
+.span-skills {
     font-weight: 700;
 }
