--- a/style.css
+++ b/style.css
@@ -35,11 +35,8 @@ body {
     font-family: UbuntuMono, Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 1.3;
-    min-height: 100vh;
-    margin: 0; padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    margin: 0;
+    padding: 0;
 }
 
 * {
@@ -56,11 +53,6 @@ body {
     padding: 0 0 25px;
     line-height: 4px;
     text-align: center;
-}
-
-.container {
-    max-width: 850px;
-    margin: 0 auto;
 }
 
 .main-container {
@@ -83,21 +75,6 @@ body {
     text-align: center;
 }
 
-@media (max-width: 700px) {
-    section,
-    .contacts,
-    .summary,
-    .courses,
-    .skills,
-    .english,
-    .profile {
-        width: 100%;
-    }
-    .profile-title {
-        margin-top: 0;
-    }
-}
-
 .profile-title {
     text-align: center;
     margin-top: 60px;
@@ -108,38 +85,40 @@ body {
 }
 
 .nav-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
+    text-align: center;
+    margin-top: 0;
+}
+
+.nav-item {
+    display: inline-block;   
+    height: 64px;
 }
 
 .nav-link {
     font-family: MajorMonoDisplay, Arial, Helvetica, sans-serif;
     padding: 0 40px;
-    line-height: 40px;
+    line-height: 64px;
     font-size: 24px;
     text-decoration: none;
-    transition: .3s;
     color: #ff0000;
 }
 
 .nav-link:hover {
     color: #ffe4c4;
     background-color: #dc143c;
-    padding: 26px 40px;
+    padding: 20px 40px;
 }
 
 .contact-link {
-text-decoration: none;
-  color: #dc143c;
-  transition: color .5s;
+    text-decoration: none;
+    color: #dc143c;
+    transition: color .5s;
 }
 
 .contact-link:hover {
-  color: #ffe4c4;
-  background-color: #dc143c;
-  padding: 0px 0px;
+    color: #ffe4c4;
+    background-color: #dc143c;
+    padding: 0px 0px;
 }
 
 ul {
@@ -180,4 +159,24 @@ html {
 .span-contacts,
 .span-skills {
     font-weight: 700;
+}
+
+@media only screen and (max-width: 700px) {
+section,
+.contacts,
+.summary,
+.courses,
+.skills,
+.english,
+.profile {
+    width: 100%;
+}
+
+.profile-title {
+ margin-top: 0;
+}
+
+.nav-list {
+    margin-top: 0;
+}
 }
