refactor: change class of profile image

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ html {
     list-style: none;
 }
 
-.my-photo {
+.profile-img {
     border-radius: 2%;
     box-shadow: 1px 1px 3px 1px #0707074d;
 }
