--- a/style.css
+++ b/style.css
@@ -64,9 +64,23 @@ body {
 .summary,
 .courses,
 .skills,
+.code,
+.projects,
 .english {
     width: 50%;
     padding: 0 25px;
+}
+
+.code-example-title,
+.projects-title {
+    text-align: center;
+}
+
+.code-cv {
+    display: block;
+    padding: 10px 10px 0;
+    background-color: #fff7ed;
+    border-radius: 10px;
 }
 
 .profile {
@@ -96,7 +110,7 @@ body {
 
 .nav-link {
     font-family: MajorMonoDisplay, Arial, Helvetica, sans-serif;
-    padding: 0 40px;
+    padding: 0 20px;
     line-height: 64px;
     font-size: 24px;
     text-decoration: none;
@@ -106,7 +120,7 @@ body {
 .nav-link:hover {
     color: #ffe4c4;
     background-color: #dc143c;
-    padding: 20px 40px;
+    padding: 20px 20px;
 }
 
 .contact-link {
@@ -131,7 +145,8 @@ html {
 
 .contacts-list,
 .courses-list,
-.skills-list {
+.skills-list,
+.projects-list {
     list-style: none;
 }
 
@@ -167,6 +182,7 @@ section,
 .summary,
 .courses,
 .skills,
+.code,
 .english,
 .profile {
     width: 100%;
